<resources>
    <string name="app_name">Ecommerce</string>
    <string name="info">Info</string>
    <string name="transaksi_berhasil">Transaksi Berhasil</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="lewati">Skip</string>
    <string name="selanjutnya">Next</string>
    <string name="gabung_sekarang">Join now</string>
    <string name="kata_sandi">password</string>
    <string name="masuk">Login</string>
    <string name="atau_daftar_dengan">Or register with</string>
    <string name="daftar">Register</string>
    <string name="atau_masuk_dengan">Or login with</string>
    <string name="nama">Name</string>
    <string name="selesai">Done</string>
    <string name="kamera">Camera</string>
    <string name="galeri">gallery</string>
    <string name="pilih_gambar">select image</string>
    <string name="Keluar">Logout</string>
    <string name="cari">Search</string>
    <string name="urutkan">Sort</string>
    <string name="ulasan">Rating</string>
    <string name="penjualan">Sale</string>
    <string name="harga_terendah">Lowest Price</string>
    <string name="harga_tertinggi">Highest Price</string>
    <string name="kategori">category</string>
    <string name="harga">Price</string>
    <string name="tampilkan_produk">Show Product</string>
    <string name="barang">Product</string>
    <string name="ditambahkan_kekeranjang">Insert to cart</string>
    <string name="stok_habis">Out of stock</string>
    <string name="terjual_item">%1$s | sales %2$s</string>
    <string name="btn_tambah_keranjang">Add to cart</string>
    <string name="pilih_semua">Select All</string>
    <string name="btn_hapus">Delete</string>
    <string name="keranjang">Cart</string>
    <string name="total_bayar">Total Pay</string>
    <string name="btn_beli">Buy</string>
    <string name="pembayaran">Payment</string>
    <string name="pilih_pembayaran">Select Payment</string>
    <string name="bayar">Pay</string>
    <string name="sisa">Left</string>
    <string name="stok">Stock %1$s</string>
    <string name="barang_yang_dibeli">items to be purchased</string>
    <string name="pembayaran_berhasil">Payment successful</string>
    <string name="beri_ulasan">Review</string>
    <string name="detail_transaksi">Detail Transaction</string>
    <string name="id_transaksi">ID Transaction</string>
    <string name="status">Status</string>
    <string name="tanggal">Date</string>
    <string name="waktu">Time</string>
    <string name="metode_pembayarana">Payment Method</string>
    <string name="belanja">Shopping</string>
    <string name="ulas">Review</string>
    <string name="spannable_text_daftar_first">By registering here,</string>
    <string name="spannable_text_masuk_first">By entering here,</string>
    <string name="spannable_text_daftar"> you agree to the Terms &amp; Conditions and TokoPhincon Privacy Policy.</string>
    <string name="syarat_dan_ketentuan">Terms &amp; Conditions</string>
    <string name="kebijakan_privasi">Privacy Policy.</string>
    <string name="pilih_varian">select variant</string>
    <string name="deskripsi_produk">Product Description</string>
    <string name="ulasan_pembeli">Reviews</string>
    <string name="lihat_semua">See All</string>
    <string name="pembeli_merasa_puas">%1$s buyers are satisfied</string>
    <string name="rating_ulasan">%1$s rating · %2$s review</string>
    <string name="detail_product">Detail Product</string>
    <string name="connection">Connection</string>
    <string name="your_connection_is_unavailable">Your connection is unavailable</string>
    <string name="refresh">Refresh</string>
    <string name="terjual">Sales %1$s</string>
    <string name="terjual_baru">%1$s | Sales %2$s</string>
    <string name="total_barang">%1$s Item</string>
    <string name="terjuall">%1$s | Sales %2$s</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="wishlist">Wishlist</string>
    <string name="transaction">Transaction</string>
    <string name="beli_langsung">Buy Now</string>
    <string name="gelap">Dark</string>
    <string name="terang">Light</string>

</resources>