<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_bnv"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/storeFragment"
            android:icon="@drawable/ic_store"
            android:title="@string/store" />

        <item
            android:id="@+id/wishlistFragment"
            android:icon="@drawable/ic_favorite"
            android:title="@string/wishlist" />

        <item
            android:id="@+id/transactionFragment"
            android:icon="@drawable/ic_list_alt"
            android:title="@string/transaction" />
    </group>
</menu>