<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bottom_sheet"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.main.store.BottomSheetFragment">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:text="Filter"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/urutkan"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_urutkan"
        style="@style/Widget.App.Chip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacingVertical="-8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ulasan"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:fontFamily="@font/poppins_medium"
            android:tag="1"
            android:text="@string/ulasan"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_penjualan"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:fontFamily="@font/poppins_medium"
            android:tag="2"
            android:text="@string/penjualan"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_harga_terendah"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:fontFamily="@font/poppins_medium"
            android:tag="3"
            android:text="@string/harga_terendah"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_harga_tertinggi"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:fontFamily="@font/poppins_medium"
            android:tag="4"
            android:text="@string/harga_tertinggi"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/kategori"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_urutkan" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_apple"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:fontFamily="@font/poppins_medium"
            android:text="Apple"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_asus"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:fontFamily="@font/poppins_medium"
            android:text="Asus"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dell"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:fontFamily="@font/poppins_medium"
            android:text="Dell"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_lenovo"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:fontFamily="@font/poppins_medium"
            android:text="Lenovo"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/harga"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_brand" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:hint="@string/harga_terendah">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lowest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:hint="@string/harga_tertinggi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_highest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_show_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tampilkan_produk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <Button
        android:id="@+id/btn_reset_filter"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>